fixed tree spawn loc to prevent overflow. Bounce off bottom nodes fixed. Glitch in movement fixed.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,7 +4,7 @@ html, body {
     font-family: 'DM Mono', monospace;
 }
 body {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(35,35,35);
 }
 .container {
     resize: both;
