--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(35,35,35);
     font-family: 'DM Mono', monospace;
 }
 .center {
